// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    checked={true}
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={true}
        className="sc-iDRUQT ikvNIX"
      />
    </span>
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Reverse direction 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
  </div>
</label>
`;
